# HttpServer

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt  HttpServerConfig.cmake.in
lib/include/: routes.h  server.h
lib/server/: CMakeLists.txt  server.c  server.h
lib/src/: routes.c  server.c
